--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
     ports:
       - "8088:80"
     volumes:
+      # config share project folder
       - ./src/intern-training-khuongpham:/var/www/html
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     networks:
